--- a/Demo13WinAppExample/App.config
+++ b/Demo13WinAppExample/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="Cn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Emmanuel\Projects\Desarrollo III\Demo01\Demo17Log4Net\Log4NETDemo.mdf;Integrated Security=True" />
+	</connectionStrings>
 </configuration>
