--- a/Demo13WinAppExample/packages.config
+++ b/Demo13WinAppExample/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AWSSDK.Core" version="3.7.402.16" targetFramework="net472" />
   <package id="AWSSDK.Rekognition" version="3.7.400.110" targetFramework="net472" />
+  <package id="log4net" version="3.0.4" targetFramework="net472" />
 </packages>
