--- a/Demo12WEBAPP/packages.config
+++ b/Demo12WEBAPP/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Azure.Core" version="1.38.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.11.4" targetFramework="net472" />
+  <package id="log4net" version="3.0.4" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Cryptography" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
